fix newsletter spacing:

--- a/src/pages/blog-page/blog-page.scss
+++ b/src/pages/blog-page/blog-page.scss
@@ -20,6 +20,11 @@ blog-post + blog-post {
 
 }
 
+blog-newsletter {
+ margin-block-start: 97px;
+ margin-block-end: 106px;
+}
+
 
 
 
